Get users location on startup and put a marker on it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">TripTracker</string>
     <string name="title_activity_trip">Trip</string>
-    <string name="title_activity_map">Map</string>
+    <string name="title_activity_map">TripTracker</string>
 </resources>
